--- a/src/PersonalKanban/assets/locales/en/translations.json
+++ b/src/PersonalKanban/assets/locales/en/translations.json
@@ -1,27 +1,27 @@
 {
-  "title": "Title",
-  "description": "Description",
-  "cancel": "Cancel",
-  "submit": "Submit",
-  "delete": "Delete",
-  "wipLimitEnabled": "WIP Limit Enabled",
-  "wipLimit": "WIP Limit",
+  "addColumn": "Add Column",
+  "addRecord": "Add Record",
   "background": "Background",
-  "titleRequired": "Title is required",
-  "limitRequired": "Limit is required when enabled.",
   "clear": "Clear",
   "clearBoard": "Clear Board",
   "clearBoardConfirmation": "Do you want to remove all columns and records ?",
-  "addColumn": "Add Column",
-  "editColumn": "Edit Column",
+  "cancel": "Cancel",
+  "description": "Description",
+  "delete": "Delete",
   "deleteColumn": "Delete Column",
   "deleteColumnConfirmation": "Do you want to delete column ?",
-  "addRecord": "Add Record",
-  "editRecord": "Edit Record",
   "deleteRecord": "Delete Record",
   "deleteAllRecord": "Delete All Records",
   "deleteRecordConfirmation": "Do you want to delete record ?",
   "deleteAllRecordConfirmation": "Do you want to delete all records ?",
+  "editColumn": "Edit Column",
+  "editRecord": "Edit Record",
+  "limitRequired": "Limit is required when enabled.",
   "noRecord": "No records available.",
-  "noColumn": "No columns available."
+  "noColumn": "No columns available.",
+  "submit": "Submit",
+  "title": "Title",
+  "titleRequired": "Title is required",
+  "wipLimitEnabled": "WIP Limit Enabled",
+  "wipLimit": "WIP Limit"
 }
