--- a/src/PersonalKanban/assets/locales/in/translations.json
+++ b/src/PersonalKanban/assets/locales/in/translations.json
@@ -19,6 +19,7 @@
   "limitRequired": "सक्षम होने पर सीमा आवश्यक है।",
   "noRecord": "कोई रिकॉर्ड उपलब्ध नहीं है।",
   "noColumn": "कोई कॉलम उपलब्ध नहीं है।",
+  "personalKanban": "पर्सनल कानबन",
   "submit": "दर्ज करें",
   "title": "शीर्षक",
   "titleRequired": "शीर्षक आवश्यक है",
