Update with german translation

--- a/src/PersonalKanban/assets/locales/de/translations.json
+++ b/src/PersonalKanban/assets/locales/de/translations.json
@@ -1,3 +1,28 @@
 {
-  "addColumn": "Spalte hinzufügen"
+  "addColumn": "Spalte hinzufügen",
+  "addRecord": "Datensatz hinzufügen",
+  "background": "Hintergrundfarbe",
+  "clear": "Löschen",
+  "clearBoard": "Board löschen",
+  "clearBoardConfirmation": "Möchten Sie alle Spalten und Datensätze entfernen?",
+  "cancel": "Stornieren",
+  "description": "Beschreibung",
+  "delete": "Löschen",
+  "deleteColumn": "Spalte löschen",
+  "deleteColumnConfirmation": "Möchten Sie die Spalte löschen?",
+  "deleteRecord": "Aufzeichnung Löschen",
+  "deleteAllRecord": "Alle Datensätze Löschen",
+  "deleteRecordConfirmation": "Möchten Sie einen Datensatz Löschen?",
+  "deleteAllRecordConfirmation": "Möchten Sie alle Datensätze löschen?",
+  "editColumn": "Spalte bearbeiten",
+  "editRecord": "Datensatz bearbeiten",
+  "limitRequired": "Limit ist erforderlich, wenn aktiviert.",
+  "noRecord": "Keine Aufzeichnungen verfügbar.",
+  "noColumn": "Keine Spalten verfügbar.",
+  "personalKanban": "Persönliches Kanban",
+  "submit": "Einreichen",
+  "title": "Titel",
+  "titleRequired": "Titel ist erforderlich",
+  "wipLimitEnabled": "WIP-Limit aktiviert",
+  "wipLimit": "WIP-Limit"
 }
