Add chinese translation

--- a/src/PersonalKanban/assets/locales/cn/translations.json
+++ b/src/PersonalKanban/assets/locales/cn/translations.json
@@ -1,3 +1,28 @@
 {
-  "addColumn": "添加栏"
+  "addColumn": "添加栏",
+  "addRecord": "添加记录",
+  "background": "背景颜色",
+  "clear": "擦除",
+  "clearBoard": "擦除板",
+  "clearBoardConfirmation": "是否要删除所有列和记录？",
+  "cancel": "取消",
+  "description": "描述",
+  "delete": "删除",
+  "deleteColumn": "删除栏",
+  "deleteColumnConfirmation": "是否要删除列？",
+  "deleteRecord": "删除记录",
+  "deleteAllRecord": "删除所有记录",
+  "deleteRecordConfirmation": "您要删除记录吗？",
+  "deleteAllRecordConfirmation": "是否要删除所有记录？",
+  "editColumn": "编辑栏",
+  "editRecord": "编辑记录",
+  "limitRequired": "启用时需要限制。",
+  "noRecord": "没有可用的记录。",
+  "noColumn": "没有可用的栏。",
+  "personalKanban": "个人看板",
+  "submit": "提交",
+  "title": "标题",
+  "titleRequired": "标题为必填项",
+  "wipLimitEnabled": "启用在制品限制",
+  "wipLimit": "在制品限额"
 }
