Add spanish translations

--- a/src/PersonalKanban/assets/locales/es/translations.json
+++ b/src/PersonalKanban/assets/locales/es/translations.json
@@ -1,3 +1,28 @@
 {
-  "addColumn": "Añadir columna"
+  "addColumn": "Añadir columna",
+  "addRecord": "Agregar registro",
+  "background": "Color de fondo",
+  "clear": "Borrar",
+  "clearBoard": "Borrar tablero",
+  "clearBoardConfirmation": "Quiere eliminar todas las columnas y registros?",
+  "cancel": "Cancelar",
+  "description": "Descripción",
+  "delete": "Eliminar",
+  "deleteColumn": "Eliminar columna",
+  "deleteColumnConfirmation": "Quieres eliminar la columna?",
+  "deleteRecord": "Eliminar el registro",
+  "deleteAllRecord": "Eliminar todos los registros",
+  "deleteRecordConfirmation": "Quieres borrar el registro?",
+  "deleteAllRecordConfirmation": "Quieres borrar todos los registros?",
+  "editColumn": "Editar columna",
+  "editRecord": "Editar registro",
+  "limitRequired": "Se requiere límite cuando está habilitado.",
+  "noRecord": "No hay registros disponibles.",
+  "noColumn": "No hay columnas disponibles.",
+  "personalKanban": "Kanban Personal",
+  "submit": "Enviar",
+  "title": "Título",
+  "titleRequired": "Se requiere título",
+  "wipLimitEnabled": "Límite WIP habilitado",
+  "wipLimit": "Límite WIP"
 }
