Add japanese translation

--- a/src/PersonalKanban/assets/locales/jp/translations.json
+++ b/src/PersonalKanban/assets/locales/jp/translations.json
@@ -1,3 +1,28 @@
 {
-  "addColumn": "列を追加"
+  "addColumn": "列を追加",
+  "addRecord": "レコードを追加",
+  "background": "背景色",
+  "clear": "消去",
+  "clearBoard": "ボードの消去",
+  "clearBoardConfirmation": "すべての列とレコードを削除しますか？",
+  "cancel": "キャンセル",
+  "description": "説明",
+  "delete": "削除",
+  "deleteColumn": "列を削除",
+  "deleteColumnConfirmation": "列を削除しますか？",
+  "deleteRecord": "レコードを削除する",
+  "deleteAllRecord": "すべてのレコードを削除",
+  "deleteRecordConfirmation": "レコードを削除しますか？",
+  "deleteAllRecordConfirmation": "すべてのレコードを削除しますか？",
+  "editColumn": "列の編集",
+  "editRecord": "レコードの編集",
+  "limitRequired": "有効にすると制限が必要になります。",
+  "noRecord": "利用可能なレコードはありません。",
+  "noColumn": "使用可能な列はありません。",
+  "personalKanban": "個人かんばん",
+  "submit": "参加する",
+  "title": "題名",
+  "titleRequired": "タイトルが必要です",
+  "wipLimitEnabled": "WIP制限が有効",
+  "wipLimit": "仕掛品制限"
 }
