Add russian translation

--- a/src/PersonalKanban/assets/locales/ru/translations.json
+++ b/src/PersonalKanban/assets/locales/ru/translations.json
@@ -1,3 +1,28 @@
 {
-  "addColumn": "Добавить столбец"
+  "addColumn": "Добавить столбец",
+  "addRecord": "Добавить запись",
+  "background": "Фоновый цвет",
+  "clear": "Стереть",
+  "clearBoard": "Стереть доску",
+  "clearBoardConfirmation": "Вы хотите удалить все столбцы и записи?",
+  "cancel": "Отмена",
+  "description": "Описание",
+  "delete": "удалять",
+  "deleteColumn": "Удалить столбец",
+  "deleteColumnConfirmation": "Вы хотите удалить столбец?",
+  "deleteRecord": "Удалить запись",
+  "deleteAllRecord": "Удалить все записи",
+  "deleteRecordConfirmation": "Вы хотите удалить запись?",
+  "deleteAllRecordConfirmation": "Вы хотите удалить все записи?",
+  "editColumn": "Изменить столбец",
+  "editRecord": "Редактировать запись",
+  "limitRequired": "Предел требуется, если он включен.",
+  "noRecord": "Нет доступных записей.",
+  "noColumn": "Нет доступных столбцов.",
+  "personalKanban": "Персональный Канбан",
+  "submit": "представить",
+  "title": "заглавие",
+  "titleRequired": "Требуется название",
+  "wipLimitEnabled": "Ограничение WIP включено",
+  "wipLimit": "Предел НЗП"
 }
